UI: Tree View stuck in collapsable state on Spreadsheet editor #114055

Closed
opened 2023-10-23 11:33:22 +02:00 by Dalai Felinto · 0 comments

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-23 00:49, hash: 25ec65101884
Worked: never

Short description of error
It is very easy to get stuck with an open item in the tree view, for example in the Spreadsheet editor.

Exact steps for others to reproduce the error

  • Try to toggle the Point Cloud domain in the spreadsheet.
  • Eventually it gets stuck
**Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-23 00:49, hash: `25ec65101884` Worked: never **Short description of error** It is very easy to get stuck with an open item in the tree view, for example in the Spreadsheet editor. **Exact steps for others to reproduce the error** * Try to toggle the Point Cloud domain in the spreadsheet. * Eventually it gets stuck
Dalai Felinto added the
Module
User Interface
Type
Bug
Status
Confirmed
Priority
Normal
labels 2023-10-23 11:33:23 +02:00
Dalai Felinto added this to the User Interface project 2023-10-23 11:33:25 +02:00
Julian Eisel was assigned by Dalai Felinto 2023-10-23 11:33:34 +02:00
Dalai Felinto added the
Interest
Grease Pencil
label 2023-10-23 11:33:44 +02:00
Dalai Felinto changed title from UI: Grid Layout stuck in collapsable state on Spreadsheet editor to UI: Tree View stuck in collapsable state on Spreadsheet editor 2023-10-23 15:47:51 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-23 21:23:37 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114055
No description provided.